# blossom

./: .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .mailmap  .pre-commit-config.yaml  .ruff.toml  CODEOWNERS  CODE_OF_MERIT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  conftest.py  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
.github/: pull_request_template.md
.github/workflows/: build_and_release.yml  bump-version.yml  ci.yml  main.yml  static-analysis.yml  test_build.yml  tests.yml
api/: __init__.py  admin.py  apps.py  authentication.py  filters.py  helpers.py  misc_views.py  models.py  pagination.py  serializers.py  slack_helpers.py  slack_views.py  submission_views.py  transcription_views.py  urls.py  views.py  volunteer_views.py
api/bootstrap/: db.py  helpers.py  main.py  pushshift.py  reddit_comment_tree.py
api/migrations/: 0001_initial.py  0002_auto_20200319_2141.py  0002_auto_20200506_0250.py  0003_auto_20200425_2330.py  0003_auto_20200506_1721.py  0004_auto_20200426_0457.py  0005_auto_20200426_0504.py  0006_remove_transcription_ocr_text.py  0007_auto_20200502_1841.py  0007_source_id.py  0008_auto_20200502_2055.py  0008_remove_source_id.py  0009_auto_20200502_2117.py  0009_submission_image_url.py  0010_auto_20200505_2009.py  0010_auto_20200831_0335.py  0011_submission_removed_from_queue.py  0013_submission_api_submiss_url_5225f1_idx.py  0014_transcription_api_transcr_author__7985ca_idx.py  0014_transcription_api_transcr_author__fbec23_idx.py  0015_submission_title.py  0016_submission_nsfw.py  0017_auto_20220116_1355.py  0018_auto_20220116_2114.py  0019_submission_approved.py  0021_auto_20220225_2009.py  0023_alter_transcriptioncheck_moderator.py  0024_auto_20220304_2015.py  0025_accountmigration.py  0025_source_create_time.py
api/slack/: __init__.py  actions.py  commands.py  events.py  transcription_check.py  utils.py
api/slack/commands/: __init__.py  blacklist.py  check.py  checkstats.py  dadjoke.py  help.py  info.py  migrate_user.py  ping.py  reset.py  unwatch.py  utils.py  warnings.py  watch.py  watchlist.py  watchstatus.py
api/slack/transcription_check/: actions.py  blocks.py  messages.py
api/slack_conn/: urls.py  views.py
api/tests/: helpers.py  test_auth.py  test_find.py  test_helpers.py  test_misc.py  test_slack.py  test_source.py  test_submissions.py  test_transcriptions.py  test_volunteers.py
api/tests/slack/: test_actions.py  test_commands.py  test_utils.py
api/tests/submissions/: test_submission_approve.py  test_submission_claim.py  test_submission_creation.py  test_submission_done.py  test_submission_expired.py  test_submission_get.py  (+11 more)
api/views/: find.py  misc.py  proxy.py  slack.py  slack_helpers.py  source.py  submission.py  transcription.py  volunteer.py
app/: __init__.py  formatting_fixes.py  middleware.py  permissions.py  reddit_actions.py  transcription_templates.json  urls.py  validation.py  views.py
app/tests/: test_formatting_fixes.py  test_misc.py  test_views.py
authentication/: __init__.py  admin.py  apps.py  backends.py  mixins.py  models.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_blossomuser_last_update_time.py  0003_auto_20210608_1743.py  0004_alter_blossomuser_managers.py  0005_blossomuser_is_bot.py
authentication/tests/: test_blossomuser.py  test_blossomusermanager.py
blossom/: .env.db  __init__.py  conftest.py  hosts.py  instrumentation.py  main.py  middleware.py  models.py  preamble.py  reddit.py  settings.py  urls.py  wsgi.py
blossom/api/: __init__.py  admin.py  apps.py  authentication.py  filters.py  helpers.py  models.py  responses.py  serializers.py  urls.py  views.py
blossom/app/: apps.py  context_processors.py  permissions.py  reddit_actions.py  urls.py  validation.py  views.py
blossom/authentication/: admin.py  apps.py  backends.py  custom_auth.py  custom_user.py  models.py  urls.py  views.py
blossom/bootstrap/: __init__.py  db.py  helpers.py  main.py  migrate_redis_data.py  multi-comment-transcriptions.py  pushshift.py  reddit_comment_tree.py  sync_removal.py
blossom/docs/: blossom_api.py  requests_example.py
blossom/engineeringblog/: __init__.py  apps.py  tests.py  urls.py  views.py
blossom/media/: __init__.py
blossom/migrations/: 0001_initial.py  0002_auto_20191207_0634.py  0003_auto_20191224_0452.py  0003_auto_20191227_0604.py  0004_auto_20191224_2347.py  0004_auto_20200109_0004.py  0005_blossomuser_blacklisted.py
blossom/ocr/: __init__.py  apps.py  helpers.py
blossom/payments/: __init__.py  apps.py  urls.py  views.py
blossom/settings/: __init__.py  base.py  local.py  prod.py  routing.py  testing.py
blossom/slack_conn/: helpers.py  strings.py  urls.py  views.py
blossom/slackapp/: listeners.py  payload.py  urls.py
blossom/social_auth/: reddit.py  urls.py
blossom/strings/: __init__.py  en_US.toml  footers.toml
blossom/templatetags/: fun_footers.py  uri_helpers.py
blossom/tests/: helpers.py
blossom/utils/: auth.py  mixins.py  pipeline.py  requests.py  test_helpers.py  workers.py
blossom/website/: __init__.py  admin.py  apps.py  forms.py  helpers.py  models.py  urls.py  views.py
blossom/wiki/: middleware.py  urls.py
blossom_wiki/: apps.py  middleware.py  tests.py  urls.py
bootstrap/: .gitignore  __init__.py  db.py  main.py  migrate_redis_data.py  multi-comment-transcriptions.py  pushshift.py  redis_data.json  stuff.py  sync_removal.py
docker/: blossom-entrypoint.sh  blossom.Dockerfile  init.sql  local_settings.py  nginx.conf
engineeringblog/: apps.py  tests.py  urls.py  views.py
ocr/: apps.py  errors.py  helpers.py  tests.py
ocr/tests/: test_helpers.py
payments/: tests.py  urls.py  views.py
utils/: __init__.py  auth.py  mixins.py  pipeline.py  test_helpers.py  workers.py
utils/tests/: test_pipeline.py
website/: admin.py  forms.py  helpers.py  models.py  urls.py  views.py
website/migrations/: 0001_initial.py  0002_alter_post_title.py
website/templatetags/: uri_helpers.py
website/tests/: test_authentication.py  test_forms.py  test_helpers.py  test_homepage.py  test_posts.py
(+248 files in other folders)
