[tool.poetry]
name = "blossom"
version = "0.0.0"
description = "The site!"
authors = ["Grafeas Group Ltd. <devs@grafeas.org>"]
include = ["blossom/static/**/*"]
exclude = ["blossom/static_dev/**/*"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2"
django-widget-tweaks = "^1.4"
stripe = "^2.48.0"
requests = "^2.31.0"
pygments = "^2.4"
djangorestframework = "^3.11.0"
djangorestframework-api-key = "^1.4.1"
psaw = "^0.0.7"
redis = "^4.4.4"
social-auth-app-django = "^3.1.0"
python-dotenv = "^0.10.3"
dpath = "^1.4.2"
timeout-decorator = "^0.4.1"
psycopg2-binary = "^2.8.4"
drf-yasg = "^1.17"
bugsnag = "^3.6"
slackclient = "^2.5"
pyyaml = "^6.0"
praw = "^7.1.0"
django-filter = "^2.3.0"
gunicorn = "^20.1.0"
typed-ast = "^1.5.0"
django-revproxy = {git = "https://github.com/hcpuk/django-revproxy.git"}
Markdown = "^3.3.6"
django-ipware = "^4.0.0"
django-mathfilters = "^1.0.0"
django-decorator-include = "^3.0"
pytest-django = "^3.7"
pytest-cov = "^2.8"
pytest-mock = "^1.13"
pytest-parallel = "^0.1.1"
shiv = "^1.0.1"
click = "^8.1.3"
django-webserver = {extras = ["pyuwsgi"], version = "^1.2.0"}
tomli = "^2.0.1"
whitenoise = {extras = ["brotli"], version = "^6.2.0"}
opentelemetry-sdk = "^1.12.0"
opentelemetry-instrumentation-django = "0.33b0"
py = "^1.11.0"  # see https://github.com/kevlened/pytest-parallel/pull/119#issuecomment-1294035423

[tool.poetry.group.dev.dependencies]
better-exceptions = "^0.3.3"
black = "^24.3.0"
pre-commit = "^2.4.0"
ruff = "^0.0.265"
coveralls = "^1.11.1"
mimesis = "^4.0.0"
blossom-wrapper = { git = "https://github.com/GrafeasGroup/blossom-wrapper.git", branch = "master" }
poetry2setup = "^1.0.0"


[tool.black]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git/
  | \.mypy_cache
  | \.github
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | htmlcov
  | blossom.egg-info
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "blossom.settings.testing"
python_files = "tests.py test_*.py *_tests.py"
addopts = "--nomigrations --cov=. --cov-report=html --cov-report=term:skip-covered -p no:warnings"

[tool.poetry.plugins."console_scripts"]
"blossom" = "blossom.main:main"
